# paddlenlp_ops_cmake

./: CMakeLists.txt  install.sh  setup.py  setup_cmake.py
csrc/: CMakeLists.txt  relu.cu
tests/: test_cmake.py  test_setup.py
